packages/go/include/xberg.h

typedef uint64_t XBERGAlefHandle;
/**
 * Free a `RedactionConfig` handle.
 * # Safety
 * Handle must have been returned by this library, or be zero.
 */
void xberg_redaction_config_free(XBERGAlefHandle handle);
/**
 * Create a `RedactionPattern` from a JSON string. Returns null on failure.
 * # Safety
 * JSON string must be valid UTF-8 and null-terminated.
 * Returned handle must be freed with `xberg_redaction_pattern_free`.
 */
XBERGAlefHandle xberg_redaction_pattern_from_json(const char *json);
/**
 * Serialize a `RedactionPattern` to a JSON string. Returns null on failure.
 * # Safety
 * `handle` must be a valid, non-zero handle returned by a `xberg` function.
 * The returned string must be freed with `xberg_free_string`.
 */
char *xberg_redaction_pattern_to_json(XBERGAlefHandle handle);
/**
 * Free a `RedactionPattern` handle.
 * # Safety
 * Handle must have been returned by this library, or be zero.
 */
void xberg_redaction_pattern_free(XBERGAlefHandle handle);
/**
 * Create a `RedactionTerm` from a JSON string. Returns null on failure.
 * # Safety
 * JSON string must be valid UTF-8 and null-terminated.
 * Returned handle must be freed with `xberg_redaction_term_free`.
 */
XBERGAlefHandle xberg_redaction_term_from_json(const char *json);
/**
 * Serialize a `RedactionTerm` to a JSON string. Returns null on failure.
 * # Safety
 * `handle` must be a valid, non-zero handle returned by a `xberg` function.
 * The returned string must be freed with `xberg_free_string`.
 */
char *xberg_redaction_term_to_json(XBERGAlefHandle handle);
/**
 * Free a `RedactionTerm` handle.
 * # Safety
 * Handle must have been returned by this library, or be zero.
 */
void xberg_redaction_term_free(XBERGAlefHandle handle);
/**
 * Create a `RerankerConfig` from a JSON string. Returns null on failure.
 * # Safety
 * JSON string must be valid UTF-8 and null-terminated.
 * Returned handle must be freed with `xberg_reranker_config_free`.
 */
XBERGAlefHandle xberg_reranker_config_from_json(const char *json);
/**
 * Serialize a `RerankerConfig` to a JSON string. Returns null on failure.
 * # Safety
 * `handle` must be a valid, non-zero handle returned by a `xberg` function.
 * The returned string must be freed with `xberg_free_string`.
 */
char *xberg_reranker_config_to_json(XBERGAlefHandle handle);
/**
 * Free a `RerankerConfig` handle.
 * # Safety
 * Handle must have been returned by this library, or be zero.
 */
void xberg_reranker_config_free(XBERGAlefHandle handle);
/**
 * Create a `SecurityLimits` from a JSON string. Returns null on failure.
 * # Safety
 * JSON string must be valid UTF-8 and null-terminated.
 * Returned handle must be freed with `xberg_security_limits_free`.
 */
XBERGAlefHandle xberg_security_limits_from_json(const char *json);
/**
 * Serialize a `SecurityLimits` to a JSON string. Returns null on failure.
 * # Safety
 * `handle` must be a valid, non-zero handle returned by a `xberg` function.
 * The returned string must be freed with `xberg_free_string`.
 */
char *xberg_security_limits_to_json(XBERGAlefHandle handle);
/**
 * Free a `SecurityLimits` handle.
 * # Safety
 * Handle must have been returned by this library, or be zero.
 */
void xberg_security_limits_free(XBERGAlefHandle handle);
/**
 * Create a `ServerConfig` from a JSON string. Returns null on failure.
 * # Safety
 * JSON string must be valid UTF-8 and null-terminated.
 * Returned handle must be freed with `xberg_server_config_free`.
 */
XBERGAlefHandle xberg_server_config_from_json(const char *json);
/**
 * Serialize a `ServerConfig` to a JSON string. Returns null on failure.
 * # Safety
 * `handle` must be a valid, non-zero handle returned by a `xberg` function.
 * The returned string must be freed with `xberg_free_string`.
 */
char *xberg_server_config_to_json(XBERGAlefHandle handle);
/**
 * Free a `ServerConfig` handle.
 * # Safety
 * Handle must have been returned by this library, or be zero.
 */
void xberg_server_config_free(XBERGAlefHandle handle);
/**
 * Create a `SupportedFormat` from a JSON string. Returns null on failure.
 * # Safety
 * JSON string must be valid UTF-8 and null-terminated.
 * Returned handle must be freed with `xberg_supported_format_free`.
 */
XBERGAlefHandle xberg_supported_format_from_json(const char *json);
/**
 * Serialize a `SupportedFormat` to a JSON string. Returns null on failure.
 * # Safety
 * `handle` must be a valid, non-zero handle returned by a `xberg` function.
 * The returned string must be freed with `xberg_free_string`.
 */
char *xberg_supported_format_to_json(XBERGAlefHandle handle);
/**
 * Free a `SupportedFormat` handle.
 * # Safety
 * Handle must have been returned by this library, or be zero.
 */
void xberg_supported_format_free(XBERGAlefHandle handle);
/**
 * Create a `SvgOptions` from a JSON string. Returns null on failure.
 * # Safety
 * JSON string must be valid UTF-8 and null-terminated.
 * Returned handle must be freed with `xberg_svg_options_free`.
 */
XBERGAlefHandle xberg_svg_options_from_json(const char *json);
/**
 * Serialize a `SvgOptions` to a JSON string. Returns null on failure.
 * # Safety
 * `handle` must be a valid, non-zero handle returned by a `xberg` function.
 * The returned string must be freed with `xberg_free_string`.
 */
char *xberg_svg_options_to_json(XBERGAlefHandle handle);
/**
 * Free a `SvgOptions` handle.
 * # Safety
 * Handle must have been returned by this library, or be zero.
 */
void xberg_svg_options_free(XBERGAlefHandle handle);
/**
 * Create a `TesseractConfig` from a JSON string. Returns null on failure.
 * # Safety
 * JSON string must be valid UTF-8 and null-terminated.
 * Returned handle must be freed with `xberg_tesseract_config_free`.
 */
XBERGAlefHandle xberg_tesseract_config_from_json(const char *json);
/**
 * Serialize a `TesseractConfig` to a JSON string. Returns null on failure.
 * # Safety
 * `handle` must be a valid, non-zero handle returned by a `xberg` function.
 * The returned string must be freed with `xberg_free_string`.
 */
char *xberg_tesseract_config_to_json(XBERGAlefHandle handle);
/**
 * Free a `TesseractConfig` handle.
 * # Safety
 * Handle must have been returned by this library, or be zero.
 */
void xberg_tesseract_config_free(XBERGAlefHandle handle);
/**
 * Create a `TokenReductionConfig` from a JSON string. Returns null on failure.
 * # Safety
 * JSON string must be valid UTF-8 and null-terminated.
 * Returned handle must be freed with `xberg_token_reduction_config_free`.
 */
XBERGAlefHandle xberg_token_reduction_config_from_json(const char *json);
/**
 * Serialize a `TokenReductionConfig` to a JSON string. Returns null on failure.
 * # Safety
 * `handle` must be a valid, non-zero handle returned by a `xberg` function.
 * The returned string must be freed with `xberg_free_string`.
 */
char *xberg_token_reduction_config_to_json(XBERGAlefHandle handle);
/**
 * Free a `TokenReductionConfig` handle.
 * # Safety
 * Handle must have been returned by this library, or be zero.
 */
void xberg_token_reduction_config_free(XBERGAlefHandle handle);
/**
 * Create a `TokenReductionOptions` from a JSON string. Returns null on failure.
 * # Safety
 * JSON string must be valid UTF-8 and null-terminated.
 * Returned handle must be freed with `xberg_token_reduction_options_free`.
 */
XBERGAlefHandle xberg_token_reduction_options_from_json(const char *json);
/**
 * Serialize a `TokenReductionOptions` to a JSON string. Returns null on
 * failure. # Safety `handle` must be a valid, non-zero handle returned by a
 * `xberg` function. The returned string must be freed with `xberg_free_string`.
 */
char *xberg_token_reduction_options_to_json(XBERGAlefHandle handle);
/**
 * Free a `TokenReductionOptions` handle.
 * # Safety
 * Handle must have been returned by this library, or be zero.
 */
void xberg_token_reduction_options_free(XBERGAlefHandle handle);
/**
 * Create a `TranscriptionConfig` from a JSON string. Returns null on failure.
 * # Safety
 * JSON string must be valid UTF-8 and null-terminated.
 * Returned handle must be freed with `xberg_transcription_config_free`.
 */
XBERGAlefHandle xberg_transcription_config_from_json(const char *json);
/**
 * Serialize a `TranscriptionConfig` to a JSON string. Returns null on failure.
 * # Safety
 * `handle` must be a valid, non-zero handle returned by a `xberg` function.
 * The returned string must be freed with `xberg_free_string`.
 */
char *xberg_transcription_config_to_json(XBERGAlefHandle handle);
/**
 * Free a `TranscriptionConfig` handle.
 * # Safety
 * Handle must have been returned by this library, or be zero.
 */
void xberg_transcription_config_free(XBERGAlefHandle handle);
/**
 * Create a `TreeSitterConfig` from a JSON string. Returns null on failure.
 * # Safety
 * JSON string must be valid UTF-8 and null-terminated.
 * Returned handle must be freed with `xberg_tree_sitter_config_free`.
 */
XBERGAlefHandle xberg_tree_sitter_config_from_json(const char *json);
/**
 * Serialize a `TreeSitterConfig` to a JSON string. Returns null on failure.
 * # Safety
 * `handle` must be a valid, non-zero handle returned by a `xberg` function.
 * The returned string must be freed with `xberg_free_string`.
 */
char *xberg_tree_sitter_config_to_json(XBERGAlefHandle handle);
/**
 * Free a `TreeSitterConfig` handle.
 * # Safety
 * Handle must have been returned by this library, or be zero.
 */
void xberg_tree_sitter_config_free(XBERGAlefHandle handle);
/**
 * Create a `TreeSitterProcessConfig` from a JSON string. Returns null on
 * failure. # Safety JSON string must be valid UTF-8 and null-terminated.
 * Returned handle must be freed with `xberg_tree_sitter_process_config_free`.
 */
XBERGAlefHandle xberg_tree_sitter_process_config_from_json(const char *json);
/**
 * Serialize a `TreeSitterProcessConfig` to a JSON string. Returns null on
 * failure. # Safety `handle` must be a valid, non-zero handle returned by a
 * `xberg` function. The returned string must be freed with `xberg_free_string`.
 */
char *xberg_tree_sitter_process_config_to_json(XBERGAlefHandle handle);
/**
 * Free a `TreeSitterProcessConfig` handle.
 * # Safety
 * Handle must have been returned by this library, or be zero.
 */
void xberg_tree_sitter_process_config_free(XBERGAlefHandle handle);
/**
 * Create a `UrlExtractionConfig` from a JSON string. Returns null on failure.
 * # Safety
 * JSON string must be valid UTF-8 and null-terminated.
 * Returned handle must be freed with `xberg_url_extraction_config_free`.
 */
XBERGAlefHandle xberg_url_extraction_config_from_json(const char *json);
/**
 * Serialize a `UrlExtractionConfig` to a JSON string. Returns null on failure.
 * # Safety
 * `handle` must be a valid, non-zero handle returned by a `xberg` function.
 * The returned string must be freed with `xberg_free_string`.
 */
char *xberg_url_extraction_config_to_json(XBERGAlefHandle handle);
/**
 * Free a `UrlExtractionConfig` handle.
 * # Safety
 * Handle must have been returned by this library, or be zero.
 */
void xberg_url_extraction_config_free(XBERGAlefHandle handle);
/**
 * Create a `YakeParams` from a JSON string. Returns null on failure.
 * # Safety
 * JSON string must be valid UTF-8 and null-terminated.
 * Returned handle must be freed with `xberg_yake_params_free`.
 */
XBERGAlefHandle xberg_yake_params_from_json(const char *json);
/**
 * Serialize a `YakeParams` to a JSON string. Returns null on failure.
 * # Safety
 * `handle` must be a valid, non-zero handle returned by a `xberg` function.
 * The returned string must be freed with `xberg_free_string`.
 */
char *xberg_yake_params_to_json(XBERGAlefHandle handle);
/**
 * Free a `YakeParams` handle.
 * # Safety
 * Handle must have been returned by this library, or be zero.
 */
void xberg_yake_params_free(XBERGAlefHandle handle);