packages/crystal/src/xberg.cr

  fun redaction_config_free = xberg_redaction_config_free(ptr : RedactionConfig*)
  fun redaction_pattern_from_json = xberg_redaction_pattern_from_json(json : LibC::Char*) : RedactionPattern*
  fun redaction_pattern_to_json = xberg_redaction_pattern_to_json(ptr : RedactionPattern*) : LibC::Char*
  fun redaction_pattern_free = xberg_redaction_pattern_free(ptr : RedactionPattern*)
  fun redaction_term_from_json = xberg_redaction_term_from_json(json : LibC::Char*) : RedactionTerm*
  fun redaction_term_to_json = xberg_redaction_term_to_json(ptr : RedactionTerm*) : LibC::Char*
  fun redaction_term_free = xberg_redaction_term_free(ptr : RedactionTerm*)
  fun reranker_config_from_json = xberg_reranker_config_from_json(json : LibC::Char*) : RerankerConfig*
  fun reranker_config_to_json = xberg_reranker_config_to_json(ptr : RerankerConfig*) : LibC::Char*
  fun reranker_config_free = xberg_reranker_config_free(ptr : RerankerConfig*)
  fun security_limits_from_json = xberg_security_limits_from_json(json : LibC::Char*) : SecurityLimits*
  fun security_limits_to_json = xberg_security_limits_to_json(ptr : SecurityLimits*) : LibC::Char*
  fun security_limits_free = xberg_security_limits_free(ptr : SecurityLimits*)
  fun server_config_from_json = xberg_server_config_from_json(json : LibC::Char*) : ServerConfig*
  fun server_config_to_json = xberg_server_config_to_json(ptr : ServerConfig*) : LibC::Char*
  fun server_config_free = xberg_server_config_free(ptr : ServerConfig*)
  fun supported_format_from_json = xberg_supported_format_from_json(json : LibC::Char*) : SupportedFormat*
  fun supported_format_to_json = xberg_supported_format_to_json(ptr : SupportedFormat*) : LibC::Char*
  fun supported_format_free = xberg_supported_format_free(ptr : SupportedFormat*)
  fun svg_options_from_json = xberg_svg_options_from_json(json : LibC::Char*) : SvgOptions*
  fun svg_options_to_json = xberg_svg_options_to_json(ptr : SvgOptions*) : LibC::Char*
  fun svg_options_free = xberg_svg_options_free(ptr : SvgOptions*)
  fun tesseract_config_from_json = xberg_tesseract_config_from_json(json : LibC::Char*) : TesseractConfig*
  fun tesseract_config_to_json = xberg_tesseract_config_to_json(ptr : TesseractConfig*) : LibC::Char*
  fun tesseract_config_free = xberg_tesseract_config_free(ptr : TesseractConfig*)
  fun token_reduction_config_from_json = xberg_token_reduction_config_from_json(json : LibC::Char*) : TokenReductionConfig*
  fun token_reduction_config_to_json = xberg_token_reduction_config_to_json(ptr : TokenReductionConfig*) : LibC::Char*
  fun token_reduction_config_free = xberg_token_reduction_config_free(ptr : TokenReductionConfig*)
  fun token_reduction_options_from_json = xberg_token_reduction_options_from_json(json : LibC::Char*) : TokenReductionOptions*
  fun token_reduction_options_to_json = xberg_token_reduction_options_to_json(ptr : TokenReductionOptions*) : LibC::Char*
  fun token_reduction_options_free = xberg_token_reduction_options_free(ptr : TokenReductionOptions*)
  fun transcription_config_from_json = xberg_transcription_config_from_json(json : LibC::Char*) : TranscriptionConfig*
  fun transcription_config_to_json = xberg_transcription_config_to_json(ptr : TranscriptionConfig*) : LibC::Char*
  fun transcription_config_free = xberg_transcription_config_free(ptr : TranscriptionConfig*)
  fun tree_sitter_config_from_json = xberg_tree_sitter_config_from_json(json : LibC::Char*) : TreeSitterConfig*
  fun tree_sitter_config_to_json = xberg_tree_sitter_config_to_json(ptr : TreeSitterConfig*) : LibC::Char*
  fun tree_sitter_config_free = xberg_tree_sitter_config_free(ptr : TreeSitterConfig*)
  fun tree_sitter_process_config_from_json = xberg_tree_sitter_process_config_from_json(json : LibC::Char*) : TreeSitterProcessConfig*
  fun tree_sitter_process_config_to_json = xberg_tree_sitter_process_config_to_json(ptr : TreeSitterProcessConfig*) : LibC::Char*
  fun tree_sitter_process_config_free = xberg_tree_sitter_process_config_free(ptr : TreeSitterProcessConfig*)
  fun url_extraction_config_from_json = xberg_url_extraction_config_from_json(json : LibC::Char*) : UrlExtractionConfig*
  fun url_extraction_config_to_json = xberg_url_extraction_config_to_json(ptr : UrlExtractionConfig*) : LibC::Char*
  fun url_extraction_config_free = xberg_url_extraction_config_free(ptr : UrlExtractionConfig*)
  fun yake_params_from_json = xberg_yake_params_from_json(json : LibC::Char*) : YakeParams*
  fun yake_params_to_json = xberg_yake_params_to_json(ptr : YakeParams*) : LibC::Char*
  fun yake_params_free = xberg_yake_params_free(ptr : YakeParams*)
